
* `regex` function replaced with the `subs` function.  This move is both 
  semantic and pragmatic.  The term "regular expression chunk" has been 
  replaced with "sub-expressions".  The `subs` function reflects the semantic 
  change.  Additionally, Richie Cotton's **regex** package 
  (https://github.com/richierocks/regex), which is complementary to **regexr**,
  contains a `regex` function.

regexr 0.0.3 - 0.0.4
----------------------------------------------------------------

NEW FEATURES

* `as.regexr` added to coerce a regular expression to a `regexr` class using
  the regular expression breakdown of http://rick.measham.id.au/paste/explain.pl.
  The `get_construct` function extracts a script to create a `construct` regex
  from `regexr` objects that were coerced using `as.regexr`.

MINOR FEATURES

* `set_comments`, `set_regex`, and `set_names` added as a  convenience functions
  to set elements of a `regexr` object and return the object.

IMPROVEMENTS

* `print.summary_regexr` used `message` to print to the console which had the 
  potential to not return the entire input.  `print.summary_regexr` now uses 
  `cat` rather than `message`. 

CHANGES

* The recommended structure for the `construct` code is no longer a separate 
  line for each regular expression chunk's *name*, *regex*, and *comment* but
  *name*, *regex*, and *comment* all go on the same line.   This makes the  code
  less cluttered and easier to navigate, particularity if indentation is used to
  indicate nested grouping structures.  Users may choose whatever configuration 
  that suits their preference, however, examples will generally be shown via the 
  new recommended, single line, structure. 



regexr 0.0.1 - 0.0.2
----------------------------------------------------------------

**regexr** is an R framework for constructing human readable regular expressions.  
It aims to provide tools that enable the user to write regular expressions in a 