@@ -8,9 +8,9 @@ S3method(as.regexr,default)
 S3method(comments,regexr)
 S3method(get_construct,reverse_construct)
 S3method(names,regexr)
-S3method(print,regex)
 S3method(print,regexr)
 S3method(print,reverse_construct)
+S3method(print,subcom)
 S3method(print,summary_regexr)
 S3method(print,unglued)
 S3method(subs,regexr)
