@@ -1,16 +1,0 @@
-% Generated by roxygen2 (4.0.2): do not edit by hand
-\name{print.regex}
-\alias{print.regex}
-\title{Prints a regex object}
-\usage{
-\method{print}{regex}(x, ...)
-}
-\arguments{
-\item{x}{The regex object.}
-
-\item{\ldots}{Ignored.}
-}
-\description{
-Prints a regex object.
-}
-
