@@ -1,0 +1,16 @@
+% Generated by roxygen2 (4.0.2): do not edit by hand
+\name{print.subcom}
+\alias{print.subcom}
+\title{Prints a subcom object}
+\usage{
+\method{print}{subcom}(x, ...)
+}
+\arguments{
+\item{x}{The subcom object.}
+
+\item{\ldots}{Ignored.}
+}
+\description{
+Prints a subcom object.
+}
+
