@@ -4,16 +4,16 @@ test_that("test matches epected regular expression validity",{
 
     m <- structure("\\s+(?<=(foo))(;|:)\\s*[a]s th[atey]", class = c("regexr", 
 
-        "character"), subs = structure(list(space = structure("\\s+", class = c("regex", 
-        "character"), comment = "I see"), simp = "(?<=(foo))", or = structure("(;|:)\\s*", class = c("regex", 
+        "character"), subs = structure(list(space = structure("\\s+", class = c("subcom", 
+        "character"), comment = "I see"), simp = "(?<=(foo))", or = structure("(;|:)\\s*", class = c("subcom", 
         "character"), comment = "comment on what this does"), "[a]s th[atey]"), .Names = c("space", 
         "simp", "or", "")), comments = structure(list(space = "I see", 
             simp = NULL, or = "comment on what this does", NULL), .Names = c("space", 
         "simp", "or", "")))
     
-    x1 <- structure(list(subs = TRUE, chunks = structure(c(TRUE, TRUE, 
+    x1 <- structure(list(subs = TRUE, subexpressions = structure(c(TRUE, TRUE, 
         TRUE, TRUE), .Names = c("space", "simp", "or", ""))), .Names = c("regex", 
-        "chunks"))
+        "subexpressions"))
     
     expect_equivalent(test(m), x1)
 })
@@ -21,8 +21,8 @@ test_that("test matches epected regular expression validity",{
 test_that("test matches epected regular expression validity",{
     
     m2 <- structure("\\s+(?<=(foo))(;|:)\\s*[a]s th[atey](([A-Z]|(\\d{5}))", class = c("regexr", 
-        "character"), subs = structure(list(space = structure("\\s+", class = c("regex", 
-        "character"), comment = "I see"), simp = "(?<=(foo))", or = structure("(;|:)\\s*", class = c("regex", 
+        "character"), subs = structure(list(space = structure("\\s+", class = c("subcom", 
+        "character"), comment = "I see"), simp = "(?<=(foo))", or = structure("(;|:)\\s*", class = c("subcom", 
         "character"), comment = "comment on what this does"), "[a]s th[atey]", 
             "(", "([A-Z]|(\\d{5})", ")"), .Names = c("space", "simp", 
         "or", "", "", "", "")), comments = structure(list(space = "I see", 
@@ -32,9 +32,9 @@ test_that("test matches epected regular expression validity",{
     
     expect_warning(test(m2))
     
-    x2 <- structure(list(subs = FALSE, chunks = structure(c(TRUE, TRUE, 
+    x2 <- structure(list(subs = FALSE, subexpressions = structure(c(TRUE, TRUE, 
         TRUE, TRUE, FALSE, FALSE, FALSE), .Names = c("space", "simp", 
-        "or", "", "", "", ""))), .Names = c("regex", "chunks"))
+        "or", "", "", "", ""))), .Names = c("regex", "subexpressions"))
 
     out <- test(m2, quiet=TRUE)
     expect_equivalent(out, x2)
